# python-project-lvl3

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: cli.py  create_path.py  download_resources.py  engine.py  fetching.py  get_data.py  get_storage_path.py  logging.py  path.py  process_data.py  processing.py  save_data.py  storing.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: expected_resources_data.json  expected_src_list.html  expected_xkcd_com.html  local_source.html  page_source.html  resources_data.json  resources_no_paths.json  test_replace_paths.html
