[tool.poetry]
name = "slavarobotam_page_loader"
version = "0.1.0"
description = "Utility for downloading pages"
authors = ["Mari <zefiratakuet@yandex.ru>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[[tool.poetry.source]]
name = "ott45"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
