[tool.poetry]
name = "slavarobotam_page_loader"
version = "2.2.0"
description = "Utility for downloading pages"
authors = ["Mari <zefiratakuet@yandex.ru>"]
packages = [
    { include = "page_loader" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Freeware"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
bs4 = "^0.0.1"
rope = "^0.14.0"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"


[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[[tool.poetry.source]]
name = "ott45"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
